--- a/package.json
+++ b/package.json
@@ -5,15 +5,17 @@
   "main": "db.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "nodemon server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.0",
+    "bluebird": "^3.7.2",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "hbs": "^4.1.1",
+    "nodemon": "^2.0.15",
     "sequelize": "^5.21.10",
     "sqlite3": "^4.2.0"
   }
